--- a/YAZLAB2/Views/Admin/AdminHubArea.cshtml
+++ b/YAZLAB2/Views/Admin/AdminHubArea.cshtml
@@ -109,6 +109,12 @@
             <li><a asp-action="Raporlama"><i class="fas fa-chart-line"></i>Raporlama</a></li>
             <li><a asp-action="KategoriEkle"><i class="fas fa-plus-circle"></i>Kategori Ekle</a></li>
             <li><a href="/Kategori/Index" class="btn btn-success">Olan Kategoriler</a></li>
+            <a asp-controller="Statistics" asp-action="Index">İstatistikler</a>
+            <a href="/Bildirim/AdminBildirimler" class="btn btn-danger">AdminBildirimler</a>
+            <a href="/Mesaj/MesajGonder" class="btn btn-danger">MesajGonder Yap</a>
+
+
+
             <a href="@Url.Action("DownloadUserEventReport", "Statistics")" class="download-button">
                 <i class="fas fa-download"></i> Kullanıcı Etkinlik Raporunu İndir
             </a>
