--- a/YAZLAB2/Views/Admin/AdminHubArea.cshtml
+++ b/YAZLAB2/Views/Admin/AdminHubArea.cshtml
@@ -106,12 +106,11 @@
         <ul>
             <li><a asp-action="TumKullanicilar"><i class="fas fa-users"></i>Tüm Kullanıcıları Listele</a></li>
             <li><a asp-action="TumEtkinlikler"><i class="fas fa-calendar-alt"></i>Tüm Etkinlikleri Listele</a></li>
-            <li><a asp-action="Raporlama"><i class="fas fa-chart-line"></i>Raporlama</a></li>
-            <li><a asp-action="KategoriEkle"><i class="fas fa-plus-circle"></i>Kategori Ekle</a></li>
             <li><a href="/Kategori/Index" class="btn btn-success">Olan Kategoriler</a></li>
             <a asp-controller="Statistics" asp-action="Index">İstatistikler</a>
             <a href="/Bildirim/AdminBildirimler" class="btn btn-danger">AdminBildirimler</a>
             <a href="/Mesaj/MesajGonder" class="btn btn-danger">MesajGonder Yap</a>
+            <li><a asp-controller="Admin" asp-action="TumPuanlar">Tüm Kullanıcıların Puanları</a></li>
 
 
 
