--- a/YAZLAB2/Views/Etkinlik/Edit.cshtml
+++ b/YAZLAB2/Views/Etkinlik/Edit.cshtml
@@ -88,7 +88,7 @@
         </select>
     </div>
 
-    <!-- Butonlar -->
+   <!-- Butonlar -->
     <button type="submit" class="btn btn-primary">Kaydet</button>
-    <a href="@Url.Action("Index")" class="btn btn-secondary">Geri</a>
+   @*   <a href="@Url.Action("Index")" class="btn btn-secondary">Geri</a> *@
 </form>
