--- a/YAZLAB2/Views/User/Login.cshtml
+++ b/YAZLAB2/Views/User/Login.cshtml
@@ -26,6 +26,8 @@
             <div class="d-grid gap-2">
                 <button type="submit" class="btn btn-primary">Giriş Yap</button>
                 <a href="/User/Register" class="btn btn-secondary">Kayıt Ol</a>
+                <a href="@Url.Action("ForgotPassword", "Account")" class="button password-update-button">Şifre Yenile</a>
+
             </div>
         </form>
     </div>
