--- a/YAZLAB2/Views/User/UserHubArea.cshtml
+++ b/YAZLAB2/Views/User/UserHubArea.cshtml
@@ -9,6 +9,8 @@
     <div>
         <a href="/Etkinlik/Index" class="btn btn-outline-primary me-2">Etkinliklere Git</a>
         <a href="/User/Profile" class="btn btn-outline-primary me-2">Profil</a>
+        <a href="/Puan/Index" class="btn btn-outline-primary me-2">Puan</a>
+
         <a href="/Bildirim/KullaniciBildirimler" class="btn btn-danger">Kullanıcı Bildirimleri</a>
         <a href="/Mesaj/MesajGonder" class="btn btn-danger">Mesaj Gönder</a>
         <a href="/Mesaj/Mesajlarim" class="btn btn-danger">Mesajlarım</a>
