--- a/YAZLAB2/Views/User/UpdateUser.cshtml
+++ b/YAZLAB2/Views/User/UpdateUser.cshtml
@@ -83,8 +83,28 @@
                     <input asp-for="ProfilFoto" class="form-control" type="text" placeholder="Profil fotoğrafı URL'si" />
                     <span asp-validation-for="ProfilFoto" class="text-danger"></span>
                 </div>
-            </div>
-
+                <div class="form-group mb-3">
+                    <label for="IlgiAlanlari" class="form-label">İlgi Alanları</label>
+                    <div>
+                        @foreach (var kategori in Model.Kategoriler)
+                        {
+                            <div class="form-check">
+                                <input type="checkbox"
+                                       class="form-check-input"
+                                       id="kategori_@kategori.Value"
+                                       name="IlgiAlanlari"
+                                       value="@kategori.Value"
+                                @if (Model.IlgiAlanlari != null && Model.IlgiAlanlari.Contains(int.Parse(kategori.Value)))
+                                {
+                                    @:checked
+                                } />
+                                <label class="form-check-label" for="kategori_@kategori.Value">
+                                    @kategori.Text
+                                </label>
+                            </div>
+                        }
+                    </div>
+                </div>
             <div class="form-group row">
                 <div class="col-sm-9 offset-sm-3">
                     <button type="submit" class="btn btn-primary">Güncelle</button>
