KATILIMCI FAKE DE EMİN OLAMADIM

--- a/YAZLAB2/Views/Fake/GenerateFakeDataForm.cshtml
+++ b/YAZLAB2/Views/Fake/GenerateFakeDataForm.cshtml
@@ -20,3 +20,14 @@
 <form asp-action="AssignRandomEvents" method="post">
     <button type="submit" class="btn btn-success">Rastgele Etkinlik Ata</button>
 </form>
+<form asp-action="GenerateFakePuan" method="post">
+    <button type="submit" class="btn btn-success">GenerateFakePuan Etkinlik Ata</button>
+</form>
+
+
+<form asp-controller="Fake" asp-action="CreateRandomCommentsForEvent" method="post">
+    <button type="submit" class="btn btn-success">Yorumları Oluştur</button>
+</form>
+<form asp-controller="Fake" asp-action="GenerateFakeKatilimciData" method="post">
+    <button type="submit" class="btn btn-success">Yorumları Oluştur</button>
+</form>
